--- a/app/src/main/res/layout/ranking_item.xml
+++ b/app/src/main/res/layout/ranking_item.xml
@@ -1,27 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_marginBottom="8dp"
-    android:layout_marginTop="8dp"
+    android:layout_marginBottom="@dimen/default_margin"
+    android:layout_marginTop="@dimen/default_margin"
     android:layout_height="@dimen/list_item_height">
 
     <TextView
         android:id="@+id/list_item_ranking_name"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="4dp"
-        android:layout_weight="1"
-        android:text="Ranking" android:textColor="@android:color/white" android:textSize="30sp"
-    />
+        android:padding="@dimen/default_padding"
+        android:background="@drawable/rounded_rectangle"
+        android:text="@string/ranking"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textStyle="bold"
+        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
+        android:textColor="@color/textColor" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/list_item_ranking_arrow"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_arrow_down"
-        android:layout_marginRight="@dimen/horizontal_margin"/>
 </LinearLayout>
