--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -14,7 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/secondaryBackground"
+            android:background="@color/containerBackground"
             android:padding="@dimen/default_padding"
             android:orientation="vertical">
 
@@ -22,17 +22,22 @@
                 android:id="@+id/tv_placing"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableEnd="@drawable/medal_30"
-                android:gravity="end"
-                android:textColor="@color/textColor"
-                android:textSize="@dimen/default_text_size" />
+                android:layout_marginBottom="@dimen/default_margin"
+                android:background="@drawable/rounded_rectangle_secondary"
+                android:drawableStart="@drawable/medal_30"
+                android:padding="@dimen/default_padding"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:textColor="@color/textColor" />
 
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="@dimen/default_margin"
+                android:drawableEnd="@drawable/ic_face_black_24dp"
                 android:drawablePadding="@dimen/default_padding"
-                android:drawableStart="@drawable/ic_face_black_24dp"
+                android:textAlignment="textEnd"
                 android:textColor="@color/textColor"
                 android:textSize="@dimen/default_text_size" />
 
@@ -40,10 +45,14 @@
                 android:id="@+id/tv_score"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="@dimen/default_margin"
+                android:drawableEnd="@drawable/ic_star_yellow_24dp"
                 android:drawablePadding="@dimen/default_padding"
-                android:drawableStart="@drawable/ic_star_yellow_24dp"
+                android:textAlignment="textEnd"
                 android:textColor="@color/textColor"
                 android:textSize="@dimen/default_text_size" />
+
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
