--- a/app/src/main/res/layout/fragment_view_dog.xml
+++ b/app/src/main/res/layout/fragment_view_dog.xml
@@ -55,7 +55,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:src="@drawable/dog"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnMoreDogImg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spnBreeds" />
@@ -66,6 +66,7 @@
         android:layout_height="0dp"
         android:background="@color/containerBackground"
         android:visibility="gone"
+        android:elevation="@dimen/default_elevation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,5 +79,19 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center" />
     </FrameLayout>
+
+    <Button
+        android:id="@+id/btnMoreDogImg"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:background="@drawable/rounded_rectangle"
+        android:text="Ver mais"
+        android:textColor="@color/textColor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
